Issue #70: Add text alignment styles to editor content (#71)

--- a/css/tinymce-content.css
+++ b/css/tinymce-content.css
@@ -29,3 +29,18 @@ figure.align-center {
   display: table;
   margin: .5em auto;
 }
+/**
+ * Text alignment classes.
+ */
+.text-align-left {
+  text-align: left;
+}
+.text-align-right {
+  text-align: right;
+}
+.text-align-center {
+  text-align: center;
+}
+.text-align-justify {
+  text-align: justify;
+}
